2005-08-03  Carl Worth  <cworth@cworth.org>

	* rsvg-cairo-draw.c: (_pattern_add_rsvg_color_stops),
	(_set_source_rsvg_linear_gradient),
	(_set_source_rsvg_radial_gradient),
	(_set_source_rsvg_solid_colour), (_set_source_rsvg_pattern),
	(_set_source_rvsg_paint_server), (rsvg_cairo_render_path): Add
	some very preliminary code to render paths with cairo. There's
	code here to do solid colors as well as linear and radial
	gradients, (but no patterns yet). We don't yet have interfaces on
	top that allow any of this to be tested so it's guaranteed to be
	broken, (and likely is in many ways).

2005-08-02  Carl Worth  <cworth@cworth.org>

	* rsvg-base.c: (rsvg_desc_handler_characters),
	(rsvg_title_handler_characters),
	(rsvg_metadata_handler_characters), (rsvg_characters),

	(rsvg_entity_decl), (rsvg_handle_write_impl): Add casts to quiet
	gcc4's complaints about "pointer targets differ in
	signedness". Not types were changed here, only casts added. The
	type disagreement is with glib, string.h, and libxml2 as follows:

		g_strndup((char*)ch, len)
		strlen((char*name)
		entity->name = (xmlChar*)dupname
		entity->SystemID = (xmlChar*)g_strdup ((char*)systemId)
		etc.

2005-08-02  Carl Worth  <cworth@cworth.org>

	* .cvsignore:
	* doc/.cvsignore:
	* moz-plugin/.cvsignore: Add several generated files.

2005-07-30 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c: Comment out some of Caleb's text work for now. It seems
	that this breaks <switch>, and that text works fine without it at the
	moment. We'll look at this again later.
	
2005-07-30 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-base.c: ignore namespaces completely, easier than fixing the problem and works pretty well. Should backport to 2.12 so we don't have people complaining about images they can't render.


2005-07-22  William Jon McCann  <mccann@jhu.edu>

	* gdk-pixbuf-loader/io-svg.c (fill_info): Use new unanchored
	pattern mask if available.  Fixes #311277.

